--- a/prueba-css/src/styles.css
+++ b/prueba-css/src/styles.css
@@ -1,7 +1,173 @@
+:root {
+  --dark-blue: #0D4073;
+  --light-blue: #C9D9E8;
+  --cyan: #12E7FB;
+  --blue: #79A6D2;
+  --green: #A5D321;
+  --magenta: #C52D96;
+  font-size: 14px;
+}
+
 body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-      Ubuntu, "Helvetica Neue", sans-serif;
-    height: 100%;
-    width: 100%;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
+  height: 100%;
+  min-height: 100vh;
+  min-height: 100dvh;
+  width: 100%;
+  margin: 0;
+  background-color: var(--dark-blue);
+}
+
+#app {
+  color: white;
+  background-image: url(assets/bg-triangles.png);
+  background-repeat: no-repeat;
+  background-position: left top;
+  background-size: auto 100%;
+  padding: 1.5rem;
+  display: grid;
+  gap: 2rem;
+  max-width: 676px;
+  margin: 0 auto;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+h1 {
+  font-size: 2.25rem;
+  letter-spacing: .5px;
+  font-weight: 300;
+  text-align: left;
+  gap: .5rem;
+  color: var(--light-blue);
+  margin: 0;
+}
+
+header::before {
+  content: url(assets/logo.svg);
+}
+
+h2 {
+  font-size: 1.1rem;
+  font-weight: 400;
+}
+
+main h2 {
+  text-align: left;
+  color: var(--cyan);
+  margin: 0 0 1rem;
+}
+
+main p {
+  margin-bottom: 1.5rem;
+  color: var(--light-blue);
+  font-size: 14px;
+  line-height: 1.4em;
+}
+
+main ul {
+  padding-left: 1.25rem;
+  list-style: none;
+  margin-bottom: 0;
+  font-size: 14px;
+  line-height: 1.4em;
+  font-weight: 200;
+  color: var(--light-blue);
+}
+
+ul li {
+  position: relative;
+}
+
+ul li::before {
+  content: '';
+  background: var(--cyan);
+  width: 4px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  position: absolute;
+  top: 8px;
+  left: -12px;
+}
+
+aside {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 2fr;
+  border-radius: .5rem;
+  border-bottom-left-radius: 0;
+  overflow: hidden;
+  text-align: center;
+}
+
+aside>div {
+  font-size: 3rem;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
+
+aside>div>div {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+aside h2 {
+  color: var(--dark-blue);
+  text-transform: lowercase;
+  margin: auto 0;
+  letter-spacing: normal;
+  font-weight: 500;
+}
+
+aside h2::first-letter {
+  text-transform: uppercase;
+}
+
+aside .data {
+  grid-column: 1 / 3;
+  background: var(--blue);
+  font-size: 1rem;
+  cursor: default;
+}
+
+aside .data div {
+  letter-spacing: 2px;
+  word-break: break-all;
+}
+
+aside .expected {
+  background: var(--green);
+}
+
+aside .recived {
+  background: var(--magenta);
+}
+
+@media (min-width: 600px) {
+  :root {
+    font-size: 16px;
   }
-  
+
+  #app {
+    grid-template-columns: 6fr 5fr;
+  }
+
+  header {
+    grid-column: 1 / 3;
+    flex-direction: row-reverse;
+    align-items: baseline;
+    justify-content: space-between;
+  }
+
+  aside {
+    grid-column: 2;
+    grid-row: 2;
+  }
+}
